# systray-rs

./: Cargo.toml  rustfmt.toml
examples/: systray-example.rs
src/: lib.rs
src/api/: mod.rs
src/api/cocoa/: mod.rs
src/api/linux/: mod.rs
src/api/win32/: mod.rs  winapipatch.rs
