[package]
name = "systray"
version = "0.3.2"
authors = ["Kyle Machulis <kyle@machul.is>"]
description = "Rust library for making minimal cross-platform systray GUIs"
license = "BSD-3-Clause"
homepage = "http://github.com/qdot/systray-rs"
repository = "https://github.com/qdot/systray-rs.git"
readme = "README.md"
keywords = ["gui"]
edition = "2018"

[dependencies]
log= "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
winapi= {version="0.3", features=["winuser", "shellapi", "impl-debug", "impl-default"]}
libc= "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
gtk= "0.7"
glib= "0.8"
libappindicator= "0.4"

[profile.release]
lto = true
codegen-units = 1

# [target.'cfg(target_os = "macos")'.dependencies]
# objc="*"
# cocoa="*"
# core-foundation="*"
